tests/snapshots/integration_tests__example_primitives_SiLU.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron SiLU:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,activations/SiLU
