tests/snapshots/integration_tests__example_primitives_Sigmoid.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Sigmoid:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,activations/Sigmoid
