tests/snapshots/integration_tests__example_primitives_Slice.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Slice(dim, start, end):
  inputs:
    default: [*shape_in]
  outputs:
    default: [*shape_out]
  impl:
    Source: core,structural/Slice
