tests/snapshots/integration_tests__example_primitives_attention.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Add:
  inputs:
    left: [*shape]
    right: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,builtin/Add

neuron CrossAttentionBlock(d_model):
  inputs:
    query: [batch, tgt_seq, d_model]
    memory: [batch, src_seq, d_model]
  outputs:
    default: [batch, tgt_seq, d_model]
  graph:
    query -> Linear#3(d_model, d_model)
    Linear#3(d_model, d_model) -> q
    memory -> (k_path, v_path)
    k_path -> Linear#4(d_model, d_model)
    Linear#4(d_model, d_model) -> k
    v_path -> Linear#5(d_model, d_model)
    Linear#5(d_model, d_model) -> v
    (q, k, v) -> ScaledDotProductAttention#6(d_model)
    ScaledDotProductAttention#6(d_model) -> out

neuron Fork:
  inputs:
    default: [*shape]
  outputs:
    a: [*shape]
    b: [*shape]
  impl:
    Source: core,builtin/Fork

neuron GELU:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,activations/GELU

neuron LayerNorm(dim):
  inputs:
    default: [*shape, dim]
  outputs:
    default: [*shape, dim]
  impl:
    Source: core,normalization/LayerNorm

neuron Linear(in_dim, out_dim):
  inputs:
    default: [*shape, in_dim]
  outputs:
    default: [*shape, out_dim]
  impl:
    Source: core,nn/Linear

neuron MultiHeadSelfAttention(dim, num_heads):
  inputs:
    default: [batch, seq, dim]
  outputs:
    default: [batch, seq, dim]
  impl:
    Source: core,attention/MultiHeadSelfAttention

neuron PostNormAttention(dim, num_heads):
  inputs:
    default: [batch, seq, dim]
  outputs:
    default: [batch, seq, dim]
  graph:
    in -> (main, skip)
    main -> MultiHeadSelfAttention#10(dim, num_heads)
    MultiHeadSelfAttention#10(dim, num_heads) -> attn_out
    (attn_out, skip) -> Add#11()
    Add#11() -> LayerNorm#12(dim)
    LayerNorm#12(dim) -> out

neuron PreNormAttention(d_model, num_heads):
  inputs:
    default: [batch, seq, d_model]
  outputs:
    default: [batch, seq, d_model]
  graph:
    in -> (main, skip)
    main -> LayerNorm#7(d_model)
    LayerNorm#7(d_model) -> MultiHeadSelfAttention#8(d_model, num_heads)
    MultiHeadSelfAttention#8(d_model, num_heads) -> attn_out
    (attn_out, skip) -> Add#9()
    Add#9() -> out

neuron ScaledDotProductAttention(dim):
  inputs:
    query: [batch, seq, dim]
    key: [batch, seq, dim]
    value: [batch, seq, dim]
  outputs:
    default: [batch, seq, dim]
  impl:
    Source: core,attention/ScaledDotProductAttention

neuron SelfAttentionBlock(d_model, num_heads):
  inputs:
    default: [batch, seq, d_model]
  outputs:
    default: [batch, seq, d_model]
  graph:
    in -> (main, skip)
    main -> LayerNorm#0(d_model)
    LayerNorm#0(d_model) -> MultiHeadSelfAttention#1(d_model, num_heads)
    MultiHeadSelfAttention#1(d_model, num_heads) -> processed
    (processed, skip) -> Add#2()
    Add#2() -> out

neuron TransformerBlock(dim, num_heads):
  inputs:
    default: [batch, seq, dim]
  outputs:
    default: [batch, seq, dim]
  graph:
    in -> (attn_main, attn_skip)
    attn_main -> LayerNorm#13(dim)
    LayerNorm#13(dim) -> MultiHeadSelfAttention#14(dim, num_heads)
    MultiHeadSelfAttention#14(dim, num_heads) -> attn_out
    (attn_out, attn_skip) -> Add#15()
    Add#15() -> attn_residual
    attn_residual -> (ffn_main, ffn_skip)
    ffn_main -> LayerNorm#16(dim)
    LayerNorm#16(dim) -> Linear#17(dim, (dim * 4))
    Linear#17(dim, (dim * 4)) -> GELU#18()
    GELU#18() -> Linear#19((dim * 4), dim)
    Linear#19((dim * 4), dim) -> ffn_out
    (ffn_out, ffn_skip) -> Add#20()
    Add#20() -> out
