tests/snapshots/integration_tests__example_primitives_demo.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron ActivationComparison(dim):
  inputs:
    default: [batch, dim]
  outputs:
    relu: [batch, dim]
    gelu: [batch, dim]
    silu: [batch, dim]
    tanh: [batch, dim]
  graph:
    in -> ReLU#7()
    ReLU#7() -> relu
    in -> GELU#8()
    GELU#8() -> gelu
    in -> SiLU#9()
    SiLU#9() -> silu
    in -> Tanh#10()
    Tanh#10() -> tanh

neuron Add:
  inputs:
    left: [*shape]
    right: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,nn/Add

neuron DropConnect(p):
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,nn/DropConnect

neuron DropPath(drop_prob):
  inputs:
    default: [batch, *shape]
  outputs:
    default: [batch, *shape]
  impl:
    Source: core,nn/DropPath

neuron Dropout(p):
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,nn/Dropout

neuron Embedding(vocab_size, embedding_dim):
  inputs:
    default: [*, seq_len]
  outputs:
    default: [*, seq_len, embedding_dim]
  impl:
    Source: core,nn/Embedding

neuron EmbeddingLayer(vocab_size, d_model, max_len):
  inputs:
    default: [batch, seq]
  outputs:
    default: [batch, seq, d_model]
  graph:
    in -> Embedding#11(vocab_size, d_model)
    Embedding#11(vocab_size, d_model) -> PositionalEncoding#12(d_model, max_len)
    PositionalEncoding#12(d_model, max_len) -> out

neuron FeedForward(dim, hidden_dim, dropout_p):
  inputs:
    default: [*batch, dim]
  outputs:
    default: [*batch, dim]
  graph:
    in -> Linear#0(dim, hidden_dim)
    Linear#0(dim, hidden_dim) -> GELU#1()
    GELU#1() -> Dropout#2(dropout_p)
    Dropout#2(dropout_p) -> Linear#3(hidden_dim, dim)
    Linear#3(hidden_dim, dim) -> Dropout#4(dropout_p)
    Dropout#4(dropout_p) -> out

neuron Fork:
  inputs:
    default: [*shape]
  outputs:
    a: [*shape]
    b: [*shape]
  impl:
    Source: core,nn/Fork

neuron FullEmbeddingPipeline(vocab_size, d_model, max_len):
  inputs:
    default: [batch, seq]
  outputs:
    default: [batch, seq, d_model]
  graph:
    in -> Embedding#33(vocab_size, d_model)
    Embedding#33(vocab_size, d_model) -> PositionalEncoding#34(d_model, max_len)
    PositionalEncoding#34(d_model, max_len) -> Dropout#35(0.1)
    Dropout#35(0.1) -> out

neuron GELU:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,nn/GELU

neuron GroupNorm(num_groups, channels):
  inputs:
    default: [batch, channels, *spatial]
  outputs:
    default: [batch, channels, *spatial]
  impl:
    Source: core,nn/GroupNorm

neuron LayerNorm(normalized_shape):
  inputs:
    default: [*batch, normalized_shape]
  outputs:
    default: [*batch, normalized_shape]
  impl:
    Source: core,nn/LayerNorm

neuron LearnedPositionalEmbedding(max_len, d_model):
  inputs:
    default: [*, seq_len, d_model]
  outputs:
    default: [*, seq_len, d_model]
  impl:
    Source: core,nn/LearnedPositionalEmbedding

neuron Linear(in_features, out_features):
  inputs:
    default: [*batch, in_features]
  outputs:
    default: [*batch, out_features]
  impl:
    Source: core,nn/Linear

neuron NormalizationShowcase(channels):
  inputs:
    data: [*batch, channels]
    spatial: [batch, channels, *spatial_dims]
  outputs:
    layer: [*batch, channels]
    rms: [*batch, channels]
    group: [batch, channels, *spatial_dims]
  graph:
    data -> LayerNorm#20(channels)
    LayerNorm#20(channels) -> layer
    data -> RMSNorm#21(channels)
    RMSNorm#21(channels) -> rms
    spatial -> GroupNorm#22(8, channels)
    GroupNorm#22(8, channels) -> group

neuron NormalizedLinear(in_features, out_features):
  inputs:
    default: [*, in_features]
  outputs:
    default: [*, out_features]
  graph:
    in -> LayerNorm#5(in_features)
    LayerNorm#5(in_features) -> Linear#6(in_features, out_features)
    Linear#6(in_features, out_features) -> out

neuron PositionalEncoding(d_model, max_len):
  inputs:
    default: [*, seq_len, d_model]
  outputs:
    default: [*, seq_len, d_model]
  impl:
    Source: core,nn/PositionalEncoding

neuron RMSNorm(dim):
  inputs:
    default: [*batch, dim]
  outputs:
    default: [*batch, dim]
  impl:
    Source: core,nn/RMSNorm

neuron ReLU:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,nn/ReLU

neuron RegularizationStack(dim):
  inputs:
    default: [batch, seq, dim]
  outputs:
    default: [batch, seq, dim]
  graph:
    in -> Dropout#23(0.1)
    Dropout#23(0.1) -> DropConnect#24(0.05)
    DropConnect#24(0.05) -> out

neuron ResidualFFN(dim, hidden_dim):
  inputs:
    default: [*batch, dim]
  outputs:
    default: [*batch, dim]
  graph:
    in -> Fork#13()
    Fork#13() -> (main, skip)
    main -> LayerNorm#14(dim)
    LayerNorm#14(dim) -> Linear#15(dim, hidden_dim)
    Linear#15(dim, hidden_dim) -> GELU#16()
    GELU#16() -> Linear#17(hidden_dim, dim)
    Linear#17(hidden_dim, dim) -> Dropout#18(0.1)
    Dropout#18(0.1) -> processed
    (skip, processed) -> Add#19()
    Add#19() -> out

neuron SiLU:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,nn/SiLU

neuron Sigmoid:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,nn/Sigmoid

neuron Softmax:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,nn/Softmax

neuron Tanh:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,nn/Tanh

neuron TransformerFFN(dim, hidden_dim):
  inputs:
    default: [*batch, dim]
  outputs:
    default: [*batch, dim]
  graph:
    in -> Fork#25()
    Fork#25() -> (main, skip)
    main -> LayerNorm#26(dim)
    LayerNorm#26(dim) -> Linear#27(dim, hidden_dim)
    Linear#27(dim, hidden_dim) -> GELU#28()
    GELU#28() -> Dropout#29(0.1)
    Dropout#29(0.1) -> Linear#30(hidden_dim, dim)
    Linear#30(hidden_dim, dim) -> Dropout#31(0.1)
    Dropout#31(0.1) -> processed
    (skip, processed) -> Add#32()
    Add#32() -> out
