tests/snapshots/integration_tests__example_primitives_embeddings_error.snap
---
source: tests/integration_tests.rs
expression: error_text
---
Parse error: Expected { expected: "COMMENT, rparen, or call_args", found: "unexpected input", span: SourceSpan { offset: SourceOffset(5945), length: 1 } }
